--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "byline": "^5.0.0",
     "csv-parser": "^3.0.0",
     "express": "4.17.1",
+    "fast-csv": "^4.3.6",
     "random-words": "^1.1.2"
   }
 }
